# Neutrino

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/consensus-chunk-bft/: Cargo.toml
crates/consensus-chunk-bft/src/: lib.rs
crates/consensus-engine/: Cargo.toml  build.rs
crates/consensus-engine/src/: bft_loop.rs  block_state.rs  body.rs  checkpoint.rs  clock.rs  engine.rs  error.rs  finalize.rs  import.rs  lib.rs  merkle.rs  produce.rs  proposer.rs  prove.rs  signature.rs  slashing.rs  validator_set.rs
crates/consensus-engine/src/store/: chain_store.rs  error.rs  keys.rs  mod.rs  pointers.rs
crates/consensus-engine/tests/: checkpoint_chunk.rs  finalize_chunk.rs  produce_block.rs  prove_block.rs  replay_1000_slots.rs
crates/consensus-fork-choice/: Cargo.toml
crates/consensus-fork-choice/src/: lib.rs
crates/consensus-types/: Cargo.toml
crates/consensus-types/src/: lib.rs
crates/consensus-vrf/: Cargo.toml
crates/consensus-vrf/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: bls.rs  ed25519.rs  error.rs  hash.rs  lib.rs  secp256k1.rs
crates/light-client/: Cargo.toml
crates/light-client/src/: lib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs  pool.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  lib.rs  rpc.rs  service.rs  sync.rs  topic.rs
crates/node/: Cargo.toml
crates/node/src/: backend.rs  chain_backend.rs  chain_spec.rs  config.rs  db.rs  lib.rs  main.rs  producer.rs  runner.rs  tx_injector.rs
crates/node/tests/: aggregator_subnet.rs  bad_proof_blocks_chunk_finality.rs  block_proof_gossip_rejection.rs  chain_backend.rs  fee_market.rs  follower_state_replay.rs  fork_choice_dag.rs  fork_choice_production_wiring.rs  full_lifecycle.rs  import_dry_run.rs  invalid_proof_signing_detection.rs  long_run_replay.rs  mempool_admission.rs  multi_slot_localnet.rs  multi_validator_localnet.rs  multi_validator_sp1_localnet.rs  reorg_materialisation.rs  runtime_call_rpc.rs  single_validator_production.rs  slashing_detection.rs  slashing_pool_persistence.rs  snap_sync_via_rpc.rs  sync_driver_e2e.rs  three_node_sp1_gossip.rs  two_node_gossip.rs  two_validators_bft.rs  validator_activation_exit.rs  validator_set_rotation.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs
crates/proof-system/: Cargo.toml
crates/proof-system/src/: error.rs  executor.rs  lib.rs  mock.rs  public_inputs.rs  system.rs
crates/prover-block/: Cargo.toml
crates/prover-block/src/: bus.rs  config.rs  cpu.rs  fibonacci.rs  lib.rs  logup.rs  memory_consistency.rs  program_rom.rs  public_inputs.rs  range_check.rs
crates/prover-checkpoint/: Cargo.toml
crates/prover-checkpoint/src/: lib.rs
crates/prover-chunk/: Cargo.toml
crates/prover-chunk/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: backend.rs  lib.rs  server.rs  types.rs
crates/rpc/tests/: method_dispatch.rs
crates/runtime-abi/: Cargo.toml
crates/runtime-abi/src/: gas.rs  lib.rs  status.rs  syscall.rs
crates/runtime-core/: Cargo.toml
crates/runtime-core/src/: lib.rs
crates/runtime-core/tests/: host_backends.rs
crates/runtime-host/: Cargo.toml  build.rs
crates/runtime-host/src/: block_runner.rs  executor.rs  host.rs  lib.rs  overlay.rs  pointer.rs  proof_system.rs  scratch.rs  wasm.rs
crates/runtime-host/src/handlers/: block_io.rs  crypto.rs  exec_control.rs  logs.rs  mod.rs  state.rs
crates/runtime-host/tests/: block_lifecycle.rs  prove_verify.rs  runtime_query.rs  sp1_chunk_proof.rs  sp1_proof_system.rs  staking_pipeline.rs  wasm_dry_run.rs  wire_bridge.rs
crates/runtime-sdk/: Cargo.toml
crates/runtime-sdk-macros/: Cargo.toml
crates/runtime-sdk-macros/src/: lib.rs
crates/runtime-sdk/src/: allocator.rs  lib.rs  panic.rs  query.rs  start.rs  syscalls.rs
crates/runtimes/neutrino-default-runtime/: Cargo.toml  build.rs  link.x
crates/runtimes/neutrino-default-runtime/src/: lib.rs  main.rs
crates/runtimes/neutrino-default/chunk-guest/: Cargo.toml
crates/runtimes/neutrino-default/chunk-guest/src/: main.rs
crates/runtimes/neutrino-default/core/: Cargo.toml
crates/runtimes/neutrino-default/core/src/: lib.rs
crates/runtimes/neutrino-default/guest/: Cargo.toml
crates/runtimes/neutrino-default/guest/src/: main.rs
crates/runtimes/neutrino-default/master/: Cargo.toml
crates/runtimes/neutrino-default/master/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: batch.rs  column.rs  lib.rs  memory.rs  rocks.rs
crates/sync/: Cargo.toml
crates/sync/src/: backend.rs  driver.rs  error.rs  lib.rs
crates/sync/tests/: driver_loop.rs
crates/trie/: Cargo.toml
crates/trie/src/: bits.rs  error.rs  hasher.rs  lib.rs  node.rs  poseidon2.rs  proof.rs  trie.rs
crates/vm-rv32im/: Cargo.toml
crates/vm-rv32im/src/: cpu.rs  executor.rs  host.rs  instruction.rs  lib.rs  loader.rs  memory.rs  witness.rs
crates/vm-rv32im/tests/: end_to_end.rs
crates/vrf/: Cargo.toml
crates/vrf/src/: eval.rs  lib.rs  seed.rs  threshold.rs
docker/: Dockerfile
docker/integration/: chain-spec.toml  docker-compose.yml  run-smoke-test.sh
docker/integration/configs/: node1.toml  node2.toml  node3.toml  node4.toml
docs/design/: 00-overview.md  01-architecture.md  02-consensus.md  03-execution-runtime.md  04-host-abi.md  05-state-and-storage.md  06-networking.md  07-block-format.md  08-crate-layout.md  09-roadmap.md  10-proof-system.md  11-light-client.md  12-randomness.md  13-sp1-runtime-proof-rewrite.md  14-sp1-rewrite-roadmap.md  15-legacy-runtime-functionality.md  16-implemented-runtime.md  17-pending-fixes.md  18-node-completeness-gaps.md
