[workspace]
resolver = "3"
members = [
    "crates/primitives",
    "crates/codec",
    "crates/crypto",
    "crates/vrf",
    "crates/trie",
    "crates/storage",
    "crates/runtime-abi",
    "crates/vm-rv32im",
    "crates/runtime-host",
    "crates/runtime-sdk",
    "crates/runtime-sdk-macros",
    "crates/consensus-types",
    "crates/consensus-vrf",
    "crates/consensus-fork-choice",
    "crates/consensus-chunk-bft",
    "crates/proof-system",
    "crates/prover-block",
    "crates/prover-chunk",
    "crates/prover-checkpoint",
    "crates/consensus-engine",
    "crates/network",
    "crates/sync",
    "crates/mempool",
    "crates/light-client",
    "crates/rpc",
    "crates/node",
    "crates/cli",
    "crates/runtimes/neutrino-default-runtime",
]

# `runtime-sdk` and `neutrino-default-runtime` target `riscv32im-unknown-none-elf`
# and are excluded from default host-target builds. Build them explicitly:
#   cargo build -p neutrino-runtime-sdk --target riscv32im-unknown-none-elf
#   cargo build -p neutrino-default-runtime --target riscv32im-unknown-none-elf
default-members = [
    "crates/primitives",
    "crates/codec",
    "crates/crypto",
    "crates/vrf",
    "crates/trie",
    "crates/storage",
    "crates/runtime-abi",
    "crates/vm-rv32im",
    "crates/runtime-host",
    "crates/runtime-sdk-macros",
    "crates/consensus-types",
    "crates/consensus-vrf",
    "crates/consensus-fork-choice",
    "crates/consensus-chunk-bft",
    "crates/proof-system",
    "crates/prover-block",
    "crates/prover-chunk",
    "crates/prover-checkpoint",
    "crates/consensus-engine",
    "crates/network",
    "crates/sync",
    "crates/mempool",
    "crates/light-client",
    "crates/rpc",
    "crates/node",
    "crates/cli",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.85"
authors       = ["The Neutrino Authors"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/anomalyco/neutrino"
homepage      = "https://github.com/anomalyco/neutrino"
documentation = "https://github.com/anomalyco/neutrino"
readme        = "README.md"
publish       = false

[workspace.lints.rust]
# Treat anything that hints at undefined behaviour, accidental unsafety,
# or stale code as an error in CI. Local devs can still iterate freely.
unsafe_op_in_unsafe_fn      = "deny"
unreachable_pub             = "warn"
missing_docs                = "warn"
rust_2018_idioms            = { level = "warn", priority = -1 }
rust_2024_compatibility     = { level = "warn", priority = -1 }
unused_must_use             = "deny"

[workspace.lints.clippy]
# Pedantic-ish but not painful. We tighten further inside each crate if needed.
all                         = { level = "warn", priority = -1 }
pedantic                    = { level = "warn", priority = -1 }
nursery                     = { level = "warn", priority = -1 }
cargo                       = { level = "warn", priority = -1 }
# Exceptions that are noisy and low-signal for a young codebase.
module_name_repetitions     = "allow"
must_use_candidate          = "allow"
missing_errors_doc          = "allow"
missing_panics_doc          = "allow"
multiple_crate_versions     = "allow"
cargo_common_metadata       = "allow"

[workspace.dependencies]
# In-tree crates — declared here so every dependent uses the same path.
neutrino-primitives             = { path = "crates/primitives",             version = "0.1.0", default-features = false }
neutrino-codec                  = { path = "crates/codec",                  version = "0.1.0", default-features = false }
neutrino-crypto                 = { path = "crates/crypto",                 version = "0.1.0", default-features = false }
neutrino-vrf                    = { path = "crates/vrf",                    version = "0.1.0", default-features = false }
neutrino-trie                   = { path = "crates/trie",                   version = "0.1.0", default-features = false }
neutrino-storage                = { path = "crates/storage",                version = "0.1.0" }
neutrino-runtime-abi            = { path = "crates/runtime-abi",            version = "0.1.0", default-features = false }
neutrino-vm-rv32im              = { path = "crates/vm-rv32im",              version = "0.1.0" }
neutrino-runtime-host           = { path = "crates/runtime-host",           version = "0.1.0" }
neutrino-runtime-sdk            = { path = "crates/runtime-sdk",            version = "0.1.0", default-features = false }
neutrino-runtime-sdk-macros     = { path = "crates/runtime-sdk-macros",     version = "0.1.0" }
neutrino-consensus-types        = { path = "crates/consensus-types",        version = "0.1.0", default-features = false }
neutrino-consensus-vrf          = { path = "crates/consensus-vrf",          version = "0.1.0" }
neutrino-consensus-fork-choice  = { path = "crates/consensus-fork-choice",  version = "0.1.0" }
neutrino-consensus-chunk-bft    = { path = "crates/consensus-chunk-bft",    version = "0.1.0" }
neutrino-proof-system           = { path = "crates/proof-system",           version = "0.1.0", default-features = false }
neutrino-prover-block           = { path = "crates/prover-block",           version = "0.1.0" }
neutrino-prover-chunk           = { path = "crates/prover-chunk",           version = "0.1.0" }
neutrino-prover-checkpoint      = { path = "crates/prover-checkpoint",      version = "0.1.0" }
neutrino-consensus-engine       = { path = "crates/consensus-engine",       version = "0.1.0" }
neutrino-network                = { path = "crates/network",                version = "0.1.0" }
neutrino-sync                   = { path = "crates/sync",                   version = "0.1.0" }
neutrino-mempool                = { path = "crates/mempool",                version = "0.1.0" }
neutrino-light-client           = { path = "crates/light-client",           version = "0.1.0", default-features = false }
neutrino-rpc                    = { path = "crates/rpc",                    version = "0.1.0" }

# External — pinned at major versions; cargo update controls minor/patch.
# Canonical wire codec. Borsh is chosen over SCALE because its fixed-width
# u32 length prefixes produce smaller, simpler in-circuit decoders for the
# SP1 and Plonky3 backends. See docs/design/07-block-format.md.
borsh               = { version = "1.5",  default-features = false, features = ["derive"] }

blake3              = { version = "1.5",  default-features = false }
sha2                = { version = "0.10", default-features = false }
tiny-keccak         = { version = "2.0",  features = ["keccak"] }

blst                = { version = "0.3" }
ed25519-dalek       = { version = "2.1",  default-features = false, features = ["zeroize", "rand_core", "alloc"] }
k256                = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }

subtle              = { version = "2.6",  default-features = false }
zeroize             = { version = "1.8",  default-features = false, features = ["derive"] }
# rand_core stays at 0.6 because ed25519-dalek 2.1 and k256 0.13 both
# bind their generic Rng arguments to the rand_core 0.6 trait set.
rand_core           = { version = "0.6",  default-features = false, features = ["getrandom"] }
# Workspace rand is 0.10 to match the version Plonky3 0.5 (`prover-block`)
# pulls in. Tests on the consensus side use `rand_core::OsRng` directly
# rather than `rand::rngs::OsRng` so the two crates do not have to
# share a rand version with the prover backend.
rand                = { version = "0.10" }
# Deterministic CSPRNG paired with rand_core 0.6 for tests that need
# both a reproducible seed and an Rng that satisfies `ed25519-dalek`,
# `k256`, and `blst`'s rand_core 0.6 trait bounds.
rand_chacha         = { version = "0.3" }
rocksdb             = { version = "0.22", default-features = false }

thiserror           = { version = "2.0" }
hex                 = { version = "0.4",  default-features = false, features = ["alloc"] }

# JSON-RPC server for the user-facing RPC layer. Same library Substrate
# and Reth use; supports HTTP and WebSocket on a single port.
jsonrpsee           = { version = "0.24", default-features = false, features = ["server", "client", "macros"] }
serde               = { version = "1.0",  features = ["derive"] }
serde_json          = { version = "1.0" }
async-trait         = { version = "0.1" }
tokio               = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
tracing             = { version = "0.1" }

# Proc-macro plumbing used by neutrino-runtime-sdk-macros.
proc-macro2         = { version = "1.0" }
quote               = { version = "1.0" }
syn                 = { version = "2.0",  features = ["full"] }

# Plonky3 — STARK toolkit for the v1 in-tree block prover (M8) and the
# chunk / recursive layers that follow (M9, M10). All p3-* crates are
# pinned to the same 0.5 minor; the project still ships pre-1.0 minor
# breaks. See `docs/design/10-proof-system.md` for the architectural
# rationale (custom RV32IM AIR over BabyBear + Poseidon2).
p3-air              = { version = "0.5" }
p3-baby-bear        = { version = "0.5" }
p3-challenger       = { version = "0.5" }
p3-commit           = { version = "0.5" }
p3-dft              = { version = "0.5" }
p3-field            = { version = "0.5" }
p3-fri              = { version = "0.5" }
p3-matrix           = { version = "0.5" }
p3-merkle-tree      = { version = "0.5" }
p3-poseidon2        = { version = "0.5" }
p3-symmetric        = { version = "0.5" }
p3-uni-stark        = { version = "0.5" }
p3-util             = { version = "0.5" }

# Test-only.
proptest            = { version = "1.6" }
proptest-derive     = { version = "0.5" }

[profile.dev]
opt-level     = 0
debug         = true
overflow-checks = true

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"
panic         = "abort"
overflow-checks = true

[profile.bench]
inherits = "release"
debug    = "line-tables-only"

[profile.ci]
inherits     = "release"
debug-assertions = true
overflow-checks  = true
