[workspace]
resolver = "3"
members = [
    "crates/primitives",
    "crates/codec",
    "crates/crypto",
    "crates/vrf",
    "crates/trie",
    "crates/storage",
    "crates/runtime-abi",
    "crates/consensus-types",
    "crates/consensus-vrf",
    "crates/consensus-fork-choice",
    "crates/consensus-chunk-bft",
    "crates/proof-system",
    "crates/prover-chunk",
    "crates/prover-checkpoint",
    "crates/consensus-engine",
    "crates/network",
    "crates/sync",
    "crates/mempool",
    "crates/light-client",
    "crates/rpc",
    "crates/node",
    "crates/cli",
    "crates/runtime-core",
    "crates/runtime-host",
    "crates/runtimes/neutrino-default/core",
    "crates/runtimes/neutrino-default/master",
]
# Guest crate at crates/runtimes/neutrino-default/guest is built by
# runtime-host's build script under the `succinct` toolchain; not a member.

default-members = [
    "crates/primitives",
    "crates/codec",
    "crates/crypto",
    "crates/vrf",
    "crates/trie",
    "crates/storage",
    "crates/runtime-abi",
    "crates/consensus-types",
    "crates/consensus-vrf",
    "crates/consensus-fork-choice",
    "crates/consensus-chunk-bft",
    "crates/proof-system",
    "crates/prover-chunk",
    "crates/prover-checkpoint",
    "crates/consensus-engine",
    "crates/network",
    "crates/sync",
    "crates/mempool",
    "crates/light-client",
    "crates/rpc",
    "crates/node",
    "crates/cli",
    "crates/runtime-core",
    "crates/runtime-host",
    "crates/runtimes/neutrino-default/core",
    "crates/runtimes/neutrino-default/master",
]

[workspace.package]
version       = "0.1.0"
edition       = "2024"
rust-version  = "1.85"
authors       = ["The Neutrino Authors"]
license       = "MIT OR Apache-2.0"
repository    = "https://github.com/anomalyco/neutrino"
homepage      = "https://github.com/anomalyco/neutrino"
documentation = "https://github.com/anomalyco/neutrino"
readme        = "README.md"
publish       = false

[workspace.lints.rust]
# Treat anything that hints at undefined behaviour, accidental unsafety,
# or stale code as an error in CI. Local devs can still iterate freely.
unsafe_op_in_unsafe_fn      = "deny"
unreachable_pub             = "warn"
missing_docs                = "warn"
rust_2018_idioms            = { level = "warn", priority = -1 }
rust_2024_compatibility     = { level = "warn", priority = -1 }
unused_must_use             = "deny"

[workspace.lints.clippy]
# Pedantic-ish but not painful. We tighten further inside each crate if needed.
all                         = { level = "warn", priority = -1 }
pedantic                    = { level = "warn", priority = -1 }
nursery                     = { level = "warn", priority = -1 }
cargo                       = { level = "warn", priority = -1 }
# Exceptions that are noisy and low-signal for a young codebase.
module_name_repetitions     = "allow"
must_use_candidate          = "allow"
missing_errors_doc          = "allow"
missing_panics_doc          = "allow"
multiple_crate_versions     = "allow"
cargo_common_metadata       = "allow"

[workspace.dependencies]
# In-tree crates — declared here so every dependent uses the same path.
neutrino-primitives             = { path = "crates/primitives",             version = "0.1.0", default-features = false }
neutrino-codec                  = { path = "crates/codec",                  version = "0.1.0", default-features = false }
neutrino-crypto                 = { path = "crates/crypto",                 version = "0.1.0", default-features = false }
neutrino-vrf                    = { path = "crates/vrf",                    version = "0.1.0", default-features = false }
neutrino-trie                   = { path = "crates/trie",                   version = "0.1.0", default-features = false }
neutrino-storage                = { path = "crates/storage",                version = "0.1.0" }
neutrino-runtime-abi            = { path = "crates/runtime-abi",            version = "0.1.0", default-features = false }
neutrino-consensus-types        = { path = "crates/consensus-types",        version = "0.1.0", default-features = false }
neutrino-consensus-vrf          = { path = "crates/consensus-vrf",          version = "0.1.0" }
neutrino-consensus-fork-choice  = { path = "crates/consensus-fork-choice",  version = "0.1.0" }
neutrino-consensus-chunk-bft    = { path = "crates/consensus-chunk-bft",    version = "0.1.0" }
neutrino-proof-system           = { path = "crates/proof-system",           version = "0.1.0", default-features = false }
neutrino-prover-chunk           = { path = "crates/prover-chunk",           version = "0.1.0" }
neutrino-prover-checkpoint      = { path = "crates/prover-checkpoint",      version = "0.1.0" }
neutrino-consensus-engine       = { path = "crates/consensus-engine",       version = "0.1.0" }
neutrino-network                = { path = "crates/network",                version = "0.1.0" }
neutrino-sync                   = { path = "crates/sync",                   version = "0.1.0" }
neutrino-mempool                = { path = "crates/mempool",                version = "0.1.0" }
neutrino-light-client           = { path = "crates/light-client",           version = "0.1.0", default-features = false }
neutrino-rpc                    = { path = "crates/rpc",                    version = "0.1.0" }
neutrino-runtime-core           = { path = "crates/runtime-core",           version = "0.1.0", default-features = false }
neutrino-runtime-host           = { path = "crates/runtime-host",           version = "0.1.0", default-features = false }
neutrino-default-runtime-core   = { path = "crates/runtimes/neutrino-default/core",   version = "0.1.0", default-features = false }
neutrino-default-runtime-master = { path = "crates/runtimes/neutrino-default/master", version = "0.1.0", default-features = false }

# External — pinned at major versions; cargo update controls minor/patch.
# Canonical wire codec. See docs/design/07-block-format.md.
borsh               = { version = "1.5",  default-features = false, features = ["derive"] }

# SP1 zkVM — hard environment dependency (see AGENTS.md).
sp1-sdk             = { version = "=6.2.1", default-features = false, features = ["blocking"] }
sp1-build           = { version = "=6.2.1" }
# `sp1-lib` exposes the Poseidon2 syscall wrapper used by the trie
# crate when compiled into the SP1 Guest. Outside the zkVM the syscall
# is unreachable, so this dep is target-gated at the consumer crate.
sp1-lib             = { version = "=6.2.1" }

# Plonky3-derived crates pinned to SP1's fork. The trie crate uses
# them on the host side to compute Poseidon2 digests that are
# byte-identical to what `sp1-lib::poseidon2::Poseidon2ByteHash`
# would produce inside the SP1 Guest. Same Poseidon2 instance the
# `POSEIDON2` precompile is bound to (KoalaBear width 16, S-box x^3,
# 8 external + 20 partial rounds).
p3-field            = { version = "=0.3.3-succinct", default-features = false }
p3-koala-bear       = { version = "=0.3.3-succinct", default-features = false }
p3-poseidon2        = { version = "=0.3.3-succinct", default-features = false }
p3-symmetric        = { version = "=0.3.3-succinct", default-features = false }
# Source of the SP1-canonical Poseidon2 round constants
# (`my_kb_16_perm`); transitively pulls slop-poseidon2 + slop-algebra.
# Pulled in by trie's host-side software permutation.
slop-koala-bear     = { version = "=6.2.1" }

# no_std + alloc compatible lazy-init for the trie's host-side
# Poseidon2 permutation singleton.
once_cell           = { version = "1.20", default-features = false, features = ["alloc", "race"] }

# Binary serde codec. Used for on-disk SP1 verifying-key caches. Pulled
# in transitively by sp1-sdk regardless.
bincode             = { version = "1.3" }

# WASM execution engine for the dynamic runtime host. `cranelift`
# default feature is heavy; we keep it on because we need the JIT/AOT
# compiler to execute master.wasm.
wasmtime            = { version = "44.0", default-features = false, features = ["cranelift", "runtime"] }

# no_std allocator for the `wasm32-unknown-unknown` builds of master.
dlmalloc            = { version = "0.2", default-features = false }

blake3              = { version = "1.5",  default-features = false }
sha2                = { version = "0.10", default-features = false }
tiny-keccak         = { version = "2.0",  features = ["keccak"] }

blst                = { version = "0.3" }
ed25519-dalek       = { version = "2.1",  default-features = false, features = ["zeroize", "rand_core", "alloc"] }
k256                = { version = "0.13", default-features = false, features = ["ecdsa", "alloc"] }

subtle              = { version = "2.6",  default-features = false }
zeroize             = { version = "1.8",  default-features = false, features = ["derive"] }
# rand_core stays at 0.6 because ed25519-dalek 2.1 and k256 0.13 both
# bind their generic Rng arguments to the rand_core 0.6 trait set.
rand_core           = { version = "0.6",  default-features = false, features = ["getrandom"] }
rand                = { version = "0.10" }
# Deterministic CSPRNG paired with rand_core 0.6 for tests that need
# both a reproducible seed and an Rng that satisfies `ed25519-dalek`,
# `k256`, and `blst`'s rand_core 0.6 trait bounds.
rand_chacha         = { version = "0.3" }
rocksdb             = { version = "0.22", default-features = false }

thiserror           = { version = "2.0" }
hex                 = { version = "0.4",  default-features = false, features = ["alloc"] }

# JSON-RPC server for the user-facing RPC layer. Same library Substrate
# and Reth use; supports HTTP and WebSocket on a single port.
jsonrpsee           = { version = "0.24", default-features = false, features = ["server", "client", "macros"] }
serde               = { version = "1.0",  features = ["derive"] }
serde_json          = { version = "1.0" }
async-trait         = { version = "0.1" }
tokio               = { version = "1.40", features = ["macros", "rt-multi-thread", "sync", "signal", "time", "fs"] }
tracing             = { version = "0.1" }

# Test-only.
proptest            = { version = "1.6" }
proptest-derive     = { version = "0.5" }

[profile.dev]
opt-level     = 0
debug         = true
overflow-checks = true

# Compile all third-party dependencies (notably SP1's prover/recursion
# stack) with release optimisations even in dev/test profiles. Our own
# workspace crates stay at opt-level=0 for fast incremental builds.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = "line-tables-only"
panic         = "abort"
overflow-checks = true

[profile.bench]
inherits = "release"
debug    = "line-tables-only"

[profile.ci]
inherits     = "release"
debug-assertions = true
overflow-checks  = true
