[package]
name          = "neutrino-cli"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[dependencies]
hex                       = { workspace = true }
neutrino-consensus-engine = { workspace = true }
neutrino-consensus-types  = { workspace = true }
neutrino-primitives       = { workspace = true }
neutrino-proof-system     = { workspace = true }
neutrino-storage          = { workspace = true }

[lints]
workspace = true
