[package]
name          = "neutrino-codec"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["parity-scale-codec/std"]

[dependencies]
parity-scale-codec = { workspace = true }

[lints]
workspace = true
