[package]
name          = "neutrino-consensus-chunk-bft"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["neutrino-consensus-types/std", "neutrino-crypto", "neutrino-primitives/std"]

[dependencies]
neutrino-consensus-types = { workspace = true }
neutrino-crypto          = { workspace = true, optional = true }
neutrino-primitives      = { workspace = true }

[lints]
workspace = true
