[package]
name          = "neutrino-consensus-engine"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = [
    "neutrino-primitives/std",
    "neutrino-consensus-types/std",
    "borsh/std",
]

[dependencies]
neutrino-primitives       = { workspace = true }
neutrino-consensus-types  = { workspace = true }
neutrino-storage          = { workspace = true }
borsh                     = { workspace = true }
thiserror                 = { workspace = true }

[lints]
workspace = true
