[package]
name          = "neutrino-consensus-engine"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }
build         = "build.rs"

[features]
default = ["std"]
std = [
    "neutrino-primitives/std",
    "neutrino-consensus-types/std",
    "borsh/std",
]

[dependencies]
neutrino-primitives       = { workspace = true }
neutrino-consensus-chunk-bft = { workspace = true }
neutrino-consensus-types  = { workspace = true }
neutrino-consensus-vrf    = { workspace = true }
neutrino-crypto           = { workspace = true }
neutrino-mempool          = { workspace = true }
neutrino-proof-system     = { workspace = true }
neutrino-runtime-abi      = { workspace = true }
neutrino-runtime-host     = { workspace = true }
neutrino-storage          = { workspace = true }
neutrino-trie             = { workspace = true }
neutrino-vrf              = { workspace = true }
borsh                     = { workspace = true }
thiserror                 = { workspace = true }

[dev-dependencies]
rand                      = { workspace = true }

[lints]
workspace = true
