[package]
name          = "neutrino-consensus-fork-choice"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true
