[package]
name          = "neutrino-consensus-vrf"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["neutrino-primitives/std", "neutrino-consensus-types/std"]

[dependencies]
neutrino-consensus-types = { workspace = true }
neutrino-crypto          = { workspace = true }
neutrino-primitives      = { workspace = true }
neutrino-vrf             = { workspace = true }

[dev-dependencies]
rand                     = { workspace = true }

[lints]
workspace = true
