[package]
name          = "neutrino-consensus-vrf"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["neutrino-primitives/std", "neutrino-consensus-types/std"]

[dependencies]
neutrino-consensus-types = { workspace = true }
neutrino-crypto          = { workspace = true }
neutrino-primitives      = { workspace = true }
neutrino-vrf             = { workspace = true }

[dev-dependencies]
# Tests use rand_chacha (rand_core 0.6 compatible) so they can feed
# `neutrino-crypto::SecretKey::generate` deterministic seeds.
rand_chacha              = { workspace = true }
rand_core                = { workspace = true }

[lints]
workspace = true
