[package]
name          = "neutrino-crypto"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = ["neutrino-primitives/std", "sha2/std"]

[dependencies]
neutrino-primitives = { workspace = true }
sha2                = { workspace = true }
tiny-keccak         = { workspace = true }

[lints]
workspace = true
