[package]
name          = "neutrino-crypto"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

# Crypto is std-only for now. blst, ed25519-dalek, and k256 all *can*
# build for no_std + alloc, but the feature plumbing is fiddly and no
# current consumer needs no_std. Revisit when the light-client wants
# WASM/mobile builds (M13); at that point we will likely split into
# `crypto-core` (hashes only, no_std) and `crypto-full` (sigs +
# aggregation, std).

[dependencies]
neutrino-primitives = { workspace = true }
sha2                = { workspace = true }
tiny-keccak         = { workspace = true }
ed25519-dalek       = { workspace = true }
k256                = { workspace = true }
blst                = { workspace = true }
zeroize             = { workspace = true }
rand_core           = { workspace = true }
hex                 = { workspace = true }

[dev-dependencies]
# Crypto tests source OsRng from rand_core (already a runtime dep)
# rather than `rand::rngs::OsRng` so the test path does not couple
# to whichever rand major version the workspace pins.

[lints]
workspace = true
