[package]
name          = "neutrino-network"
version       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[features]
default = ["std"]
std = []

[lints]
workspace = true

[dependencies]
borsh.workspace = true
futures = "0.3.32"
libp2p = { version = "0.56.0", features = ["tokio", "gossipsub", "request-response", "identify", "kad", "yamux", "noise", "tcp", "quic", "macros"] }
neutrino-consensus-types.workspace = true
neutrino-crypto.workspace = true
neutrino-primitives.workspace = true
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
